Update for Products controller.
