# src/app.js
@@ -5,6 +5,7 @@ const cors = require('cors');
 
 const authRoutes = require('./routes/auth');
 const itemRoutes = require('./routes/items');
+const productRoutes = require('./routes/products');
 const swaggerUi = require('swagger-ui-express');
 const swaggerDocument = require('./swagger.json');
 
@@ -20,6 +21,7 @@ app.use(express.json());
 
 app.use('/auth', authRoutes);
 app.use('/items', itemRoutes);
+app.use('/products', productRoutes);
 
 app.use((err, req, res, next) => {
   console.error(err);
